--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "jquery": "~2.1.3",
-    "lodash": "~3.1.0"
+    "lodash": "~3.1.0",
+    "async": "~0.9.2"
   }
 }
