--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "async": "^0.9.0",
+    "firefox": "0.0.1",
     "jquery": "^2.1.3",
     "lodash": "^3.1.0"
   },
@@ -15,6 +16,7 @@
     "chai": "^1.10.0",
     "karma": "^0.12.31",
     "karma-chai": "^0.1.0",
+    "karma-firefox-launcher": "^0.1.4",
     "karma-mocha": "^0.1.10",
     "karma-phantomjs-launcher": "^0.1.4",
     "mocha": "^2.1.0",
@@ -22,7 +24,7 @@
     "phantomjs": "^1.9.15"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "./node_modules/karma/bin/karma start"
   },
   "repository": {
     "type": "git",
