--- a/package.json
+++ b/package.json
@@ -6,12 +6,7 @@
   "directories": {
     "test": "test"
   },
-  "dependencies": {
-    "async": "^0.9.0",
-    "firefox": "0.0.1",
-    "jquery": "^2.1.3",
-    "lodash": "^3.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "chai": "^1.10.0",
     "karma": "^0.12.31",
