--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "chai": "^1.10.0",
     "karma": "^0.12.31",
     "karma-chai": "^0.1.0",
+    "karma-coverage": "^0.2.7",
     "karma-firefox-launcher": "^0.1.4",
     "karma-mocha": "^0.1.10",
     "karma-phantomjs-launcher": "^0.1.4",
