--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "Mocha-Portfolio",
-  "version": "1.0.0",
-  "description": "sure",
-  "main": "index.js",
+  "version": "0.0.1",
+  "description": "This is an app demonstrating testing front-end JavaScript with Mocha and Chai",
+  "main": "public/index.html",
   "directories": {
     "test": "test"
   },
   "dependencies": {},
   "devDependencies": {
     "chai": "^1.10.0",
+    "codeclimate-test-reporter": "0.0.4",
     "karma": "^0.12.31",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^0.1.7",
